# recommend

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy-docs.yml  release.yml
benchmarks/: analyze_performance.py  bench_itemcf.py
configs/: config.yaml
configs/dataset/: criteo_kaggle.yaml  movielens_1m.yaml  taac2025.yaml  taac2026.yaml  taobao_behavior.yaml
configs/experiment/: benchmark_all.yaml  benchmark_classical.yaml  benchmark_deep_ctr.yaml  benchmark_feature_cross.yaml  benchmark_pcvr.yaml  benchmark_sequence.yaml  benchmark_unified_gen.yaml
configs/model/: README.txt
configs/model/classical/: itemcf.yaml
configs/model/unified/: hyformer.yaml
docs/: getting-started.md  index.md
docs/analysis/: index.md
docs/assets/: echarts-loader.js
docs/concepts/: architecture.md  configuration.md
docs/experiments/: index.md
docs/guides/: index.md
docs/operations/: maintenance.md  overview.md
docs/papers/: index.md
docs/project/: api-contracts.md  artifacts.md  benchmarking.md  datasets.md  development.md  evaluation.md  models.md  pipeline.md  structure.md
examples/: run_hyformer_demo.py  run_itemcf_benchmark.py  run_itemcf_demo.py
graphify-out/: .graphify_python
graphify-out/cache/: stat-index.json
scripts/: benchmark_data_pipeline.py  download_data.py  generate_report.py  run.py  run_ablation.py  run_benchmark.py  run_single.py  train_hyformer.py
src/recsys/: __init__.py
src/recsys/core/: __init__.py  base_dataset.py  base_model.py  prediction_bundle.py  registry.py
src/recsys/data/: __init__.py  dataset_registry.py  feature_engineering.py  negative_sampling.py  preprocessor.py  split_utils.py
src/recsys/data/datasets/: __init__.py  (+8 more)
src/recsys/evaluation/: __init__.py  evaluator.py  metrics.py  ranking.py  visualization.py
src/recsys/models/: __init__.py  model_registry.py
src/recsys/pipeline/: __init__.py  benchmark.py  experiment.py  reporter.py
src/recsys/training/: __init__.py  callbacks.py  distributed.py  losses.py  optimizers.py  schedulers.py  trainer.py
src/recsys/utils/: __init__.py  config.py  device.py  logging.py  profiling.py  progress.py  reproducibility.py
tests/: __init__.py  conftest.py  test_config_bridge.py  test_imports.py  test_registry.py
tests/test_data/: test_dataset_registry.py  test_eda_cli.py  test_eda_distribution.py  test_eda_effectiveness.py  test_eda_large_dataset.py  test_eda_missing.py  test_eda_overview.py  test_eda_overview_extended.py  test_eda_rating.py  test_eda_render.py  test_eda_report.py  test_eda_sampler.py  test_eda_sequence.py  test_eda_sparsity.py  test_eda_temporal.py  test_eda_user_item.py  test_feature_engineering.py  test_movielens_1m.py  test_negative_sampling.py  test_preprocessor.py  test_taac2025_dataset.py  test_taac2026_split.py
tests/test_metrics/: __init__.py  test_classification.py  test_ranking.py
tests/test_models/: test_hyformer.py  test_itemcf.py  test_itemcf_benchmark.py
tests/test_pipeline/: __init__.py  test_benchmark.py  test_experiment.py
(+188 files in other folders)
