[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recbench"
version = "0.1.0"
description = "Comprehensive Recommendation System Benchmark — 50+ algorithms from 2001 to 2026"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "recommendation",
    "deep-learning",
    "ctr-prediction",
    "cvr-prediction",
    "benchmark",
    "collaborative-filtering",
    "sequence-recommendation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=13.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "mlflow>=2.7.0",
    "tensorboard>=2.13.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.16.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "datasets>=3.0.0",
    "huggingface_hub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
    "pre-commit>=3.4.0",
    "jupyter>=1.0.0",
    "zensical",
]
gpu = [
    "flash-attn>=2.3.0",
]
bigdata = [
    "polars>=1.0.0",
    "dask[dataframe]>=2024.1.0",
    "modin>=0.28.0",
    "vaex-core>=4.17.0",
    "joblib>=1.3.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/your-org/recbench"
Repository = "https://github.com/your-org/recbench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests that require network access or real data",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__init__.py", "tests/**"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
recbench = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-benchmark>=4.0.0",
    "recbench",
    "ruff>=0.15.17",
]

[project.scripts]
recsys-dataset-eda = "recsys.data.eda.cli:main"
